changed arrow and intro

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     
     <body onload="loadJS()">
         <div id="everything">
-            <div id="intro" class="fix full90h fixactive">
+            <div id="intro" class="fix fullscreen fixactive">
                 <div class="content">
                     <h1 id="title">Kdo nejvíce publikuje v predátorských a místních časopisech?</h1>
                     <h2 id="subtitle">Bibliometrická analýza trochu jinak</h2>
@@ -52,12 +52,13 @@
                         <a href="http://av21.avcr.cz/" target="_blank" ><img src="img/strategie_red_white.svg" class="logo"/></a>
                     </div>
                     <p>Vítek Macháček a Martin Srholec, think-tank IDEA při CERGE-EI</p>
-                    <p>Studie č. XXX/2018</p>
-                    <p>Červen 2018</p>
+                    <p>Studie č. XXX/2018 (červen 2018)</p>
+                    <br />
+                    <img src="img/down-arrow2.svg" onclick="MoveOn('oCemMluvime')" class='arrow' />
+
                 </div>
-                <center><img src="img/down-arrow2.svg" onclick="MoveOn('oCemMluvime')" class='arrow' /></center>
             </div>
-            <div id="empty-intro" class="fixempty full90h"></div>
+            <div id="empty-intro" class="fixempty fullscreen"></div>
             <div id="menu" class="floaty">
                 <a class="corner" href="https://idea.cerge-ei.cz/" target="_blank" style="left:10px;"><img src="img/IDEA2.png"/></a>
                 <div class="content">
