prevent reading on mobiles

--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
             <div id="modRozliseni" class="modal">
                     <div class="modalBody">
                         <h3>Nízké rozlišení</h3>
-                        <p>Omlouváme se, ale tato interaktivní aplikace není vhodná pro mobilní telefony. Na příliš nízkých rozlišeních - méně než 1024x768 - její čtení nemá smysl. Studii doporučujeme zobrazit na stolním počítači či notebooku. Případně zkuste prohlížeč maximalizovat.</p>
+                        <p>Omlouváme se, ale tato interaktivní aplikace není vhodná pro mobilní telefony. Na příliš nízkých rozlišeních - méně než 1024x768 - její čtení nemá smysl. Studii doporučujeme zobrazit na stolním počítači, notebooku či většině tabletů. Případně zkuste prohlížeč maximalizovat.</p>
                         <p>Pokud máte vhodné zařízení, maximalizujte obrazovku a aktualizujte stránku (F5).</p>
                         <p>Chcete-li si čtení nechat na později, zkuste si zkopírovat internetovou adresu a pošlete si ji na svůj osobní počítač.</p> 
                         <div style="margin:30px;">
