minor design changes

--- a/index.html
+++ b/index.html
@@ -47,12 +47,16 @@
                 <div class="content">
                     <h1 id="title">Kdo nejvíce publikuje v predátorských a místních časopisech?</h1>
                     <h2 id="subtitle">Bibliometrická analýza trochu jinak</h2>
+
+                    <p style="font-size:calc(15px + .7vh);" >Vít Macháček a Martin Srholec</p>
                     <div id="logos">
-                        <a href="https://idea.cerge-ei.cz/" target="_blank"><img src="img/idea-white2.svg" class="logo"/></a>
-                        <a href="http://av21.avcr.cz/" target="_blank" ><img src="img/strategie_red_white.svg" class="logo"/></a>
-                    </div>
-                    <p>Vítek Macháček a Martin Srholec, think-tank IDEA při CERGE-EI</p>
-                    <p>Studie č. XXX/2018 (červen 2018)</p>
+                            <a href="https://idea.cerge-ei.cz/" target="_blank"><img src="img/idea-white2.svg" class="logo"/></a>
+                            <a href="http://av21.avcr.cz/" target="_blank" ><img src="img/strategie_red_white.svg" class="logo"/></a>
+                        </div>
+    
+                    <p style="line-height: .5">Think-tank IDEA při Národohospodářském ústavu AV ČR</p>
+                    <p style="line-height: .5">Studie č. XXX/2018</p>
+                    <p style="line-height: .5">Červen 2018</p>
                     <br />
                     <img src="img/down-arrow2.svg" onclick="MoveOn('oCemMluvime')" class='arrow' />
 
@@ -209,7 +213,6 @@
             <div id="thanks" class="flow">
                 <div class="content">
                     <h1 id="title">Děkujeme za pozornost!</h1>
-                    <h2>Zpět na <a class="modalLink" onclick="MoveOn('empt-conclusion')">Interaktivní aplikaci</a></h2>
 
                     <a href="https://idea.cerge-ei.cz/" target="_blank"><img src="img/IDEA_greybcg.svg" class="logo"/></a>
                     <a href="http://av21.avcr.cz/" target="_blank" ><img src="img/Logo_Strategie_V3m.svg" class="logo"/></a>
@@ -222,7 +225,7 @@
                         <a id="mail" href=""><img src="img/mail.svg" /></a>
                         <a onclick="showCopyLink()"><img src="img/link.svg" /></a>
                     </div>
-                    <p>Doporučená citace: Macháček, V. a Srholec, M. (2018) Kdo nejvíce publikuje v predátorských a místních časopisech? Studie XXX/2018. Think-tank IDEA při NHÚ AV ČR.</p>
+                    <p>Doporučená citace: <a class="modalLink" onclick="showModal('modMy')">Macháček, V. a Srholec, M.</a> (2018) Kdo nejvíce publikuje v predátorských a místních časopisech? Studie XXX/2018. Think-tank IDEA při NHÚ AV ČR.</p>
                 </div>
             </div>
 
