minor design changes2

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <p style="line-height: .5">Studie č. XXX/2018</p>
                     <p style="line-height: .5">Červen 2018</p>
                     <br />
-                    <img src="img/down-arrow2.svg" onclick="MoveOn('oCemMluvime')" class='arrow' />
+                    <img src="img/down-arrow2.svg" onclick="MoveOn('oCemMluvime')" class='arrow' title="Scrollujte dolů"/>
 
                 </div>
             </div>
@@ -147,7 +147,7 @@
                     <div class="content">
                     <h4>Proč zrovna společenské vědy?</h4>
                         <p>Problém predátorského publikování ve společenských vědách dokládá nejenom, že se doposud nedokázaly vzpamatovat z desítek let trvající devastace komunistickým režimem, ale i mimořádnou míru jejich pokřivení kafemlejnkem.</p>
-                        <p>Rozsah publikování v místních časopisech tento obrázek dokresluje. Například v oborech ekonomie, finance, business a management, do kterých spadá většina vyčnívajících pracovišť, vychází stovky zahraničních indexovaných časopisů.</p>
+                        <p>Rozsah publikování v místních časopisech tento obrázek dokresluje. Například v oborech ekonomie, finance, business a management, do kterých spadá většina vyčnívajících pracovišť, vychází stovky zahraničních indexovaných časopisů. Možností publikovat je dostatek.</p>
                         <p>Společenské vědy by si zasloužily zvláštní pozornost poskytovatelů financí na výzkumnou činnost. Jejich povznesení na úroveň běžnou ve vyspělých zemích bude vyžadovat daleko větší úsilí než v jiných oborech.</p>
                         <p class="tip">Tip: Klikáním na legendu vytvoříte vlastní srovnání vybraných oborů.</p>
                     </div>
@@ -379,14 +379,12 @@
             <div id="modMy" class="modal">
                     <div class="modalBody">
                         <h3>O autorech</h3>
-                        <div class="col">
                                 <h4>Vítek Macháček</h4>
                                 <p>Pro think-tank IDEA začal pracovat v roce 2015. Magisterský titul získal v roce 2016 na Institutu ekonomických studií Univerzity Karlovy, kde je současně též doktorandem. Zabývá se ekonomií inovací, scientometrií i evropskou integrací.</p>
-                            </div>
-                            <div class="col">
+                                <br />
                                 <h4>Martin Srholec</h4>
                                 <p>Doktorské studium absolvoval na Národohospodářské fakultě VŠE a na Centre for Technology, Innovation and Culture při Univerzitě v Oslu. Od roku 2010 působí jako vědecký pracovník na CERGE-EI v Praze. Mezi roky 2011 zároveň působil v rámci Centre for Innovation, Research and Competence in the Learning Economy (CIRCLE) v Lundu. S think-tankem IDEA spolupracuje od roku 2013 zaměřuje se na otázky inovační politiky. </p>
-                            </div>                        <center><a onclick="hideModal()" class="button buttonActive">Skrýt</a></center>
+                            <center><a onclick="hideModal()" class="button buttonActive">Skrýt</a></center>
     
                     </div>
                 </div>
