last page minors

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         </div>
     
                     <p style="line-height: .5">Think-tank IDEA při Národohospodářském ústavu AV ČR</p>
-                    <p style="line-height: .5">Studie č. XXX/2018</p>
+                    <p style="line-height: .5">Studie č. 4/2018</p>
                     <p style="line-height: .5">Červen 2018</p>
                     <br />
                     <img src="img/down-arrow2.svg" onclick="MoveOn('oCemMluvime')" class='arrow' title="Posunujte kolečkem myši dolů"/>
@@ -230,8 +230,8 @@
     
                         <div></div>
                     </div>
-                    <p>Doporučená citace: <a class="modalLink" onclick="showModal('modMy')">Macháček, V. a Srholec, M.</a> (2018) Kdo nejvíce publikuje v predátorských a místních časopisech? Studie XXX/2018. Think-tank IDEA při NHÚ AV ČR.</p>
-                    <p>Upozornění: Veškeré případné nepřesnosti a chyby jdou na vrub autorů, stejně jako názory a tvrzení ve studii uvedené. Studie vznikla s podporou Akademie věd ČR v rámci Strategie AV 21. Za cenné připomínky k pracovní verzi studie děkujeme kolegům z CERGE-EI.</p>
+                    <p class="footnote">Doporučená citace: <a class="modalLink" onclick="showModal('modMy')">Macháček, V. a Srholec, M.</a> (2018) Kdo nejvíce publikuje v predátorských a místních časopisech? Studie 4/2018. Think-tank IDEA při NHÚ AV ČR.</p>
+                    <p class="footnote">Upozornění: Veškeré případné nepřesnosti a chyby jdou na vrub autorů, stejně jako názory a tvrzení ve studii uvedené. Studie vznikla s podporou Akademie věd ČR v rámci Strategie AV 21. Za cenné připomínky k pracovní verzi studie děkujeme kolegům z CERGE-EI.</p>
                     <br />
                 </div>
             </div>
