--- a/index.html
+++ b/index.html
@@ -241,8 +241,9 @@
                     <p class="footnote">Doporučená citace: <a class="modalLink" onclick="showModal('modMy')">Macháček, V. a Srholec, M.</a> (2018) Kdo nejvíce publikuje v predátorských a místních časopisech? Studie 4/2018. Think-tank IDEA při NHÚ AV ČR.</p>
                     <p class="footnote">Upozornění: Veškeré případné nepřesnosti a chyby jdou na vrub autorů, stejně jako názory a tvrzení ve studii uvedené. Studie vznikla s podporou Akademie věd ČR v rámci Strategie AV 21. Za cenné připomínky k pracovní verzi studie děkujeme kolegům z CERGE-EI.</p>
                     <br />
-                    <div class="fb-comments" data-href="https://vitekzkytek.github.io/HodnoceniWeb/" data-width="600" data-numposts="5"></div>
-                </div>
+                    <div class="fb-post" data-href="https://www.facebook.com/ideacerge/photos/a.495296640662185.1073741828.476377929220723/871778203014025/?type=3" data-width="500" data-show-text="true"><blockquote cite="https://www.facebook.com/ideacerge/photos/a.495296640662185.1073741828.476377929220723/871778203014025/?type=3" class="fb-xfbml-parse-ignore"><p>TESTY - TRESTY ?
+
+                            Mají se studenti testovat? Dávají nám výsledky testů informaci o skutečných znalostech studentů? Čtěte komentář Filipa Pertolda v dnešních Lidových novinách http://bit.ly/2sgrvud</p>Posted by <a href="https://www.facebook.com/ideacerge/">IDEA - Institut pro demokracii a ekonomickou analýzu</a> on&nbsp;<a href="https://www.facebook.com/ideacerge/photos/a.495296640662185.1073741828.476377929220723/871778203014025/?type=3">Tuesday, May 29, 2018</a></blockquote></div>                </div>
             </div>
 
             
