--- a/index.html
+++ b/index.html
@@ -413,16 +413,17 @@
             <div id="modMy" class="modal">
                 <div class="close" onclick="hideModal()"><img src="img/closeIcon3.svg" /></div>
                     <div class="modalBody" style="padding:0vw 20vw;">
-                        <h3>O autorech</h3>
+                       <h3>O autorech</h3>
                         <div class="medailon">
+                           <h4>Vítek Macháček</h4>
                             <center><img src="img/vitek.jpg" class="imgMy right" /></center>
-                            <h4 >Vítek Macháček</h4>
+
                             <p>Pro think-tank IDEA začal pracovat v&nbsp;roce 2015. Magisterský titul získal v&nbsp;roce 2016 na Institutu ekonomických studií Univerzity Karlovy, kde je současně též doktorandem. Do roku 2018 též působil v&nbsp;České spořitelně v&nbsp;rámci EU office a&nbsp;později jako makroekonomický analytik. Zabývá se&nbsp;ekonomií inovací, scientometrií i&nbsp;evropskou integrací.</p>
                             <p>E-mail: <a href="mailto:vit.machacek@cerge-ei.cz" >vit.machacek@cerge-ei.cz</a></p>
                         </div>
                         <div class="medailon">
-                            <center><img src="img/martin.jpg" class="imgMy left" /></center>
                             <h4>Martin Srholec</h4>
+                            <center><img src="img/martin.jpg" class="imgMy right" /></center>
                             <p>Doktorské studium absolvoval na Národohospodářské fakultě VŠE a&nbsp;na Centre for Technology, Innovation and Culture při Univerzitě v&nbsp;Oslu. Od roku 2010 působí jako vědecký pracovník na CERGE-EI v&nbsp;Praze. Mezi roky 2011 a&nbsp;2017 zároveň působil v&nbsp;rámci Centre for Innovation, Research and Competence in the Learning Economy (CIRCLE) v&nbsp;Lundu. s&nbsp;think-tankem IDEA spolupracuje od roku 2013. Zaměřuje se&nbsp;na ekonomii inovací, problematiku inovačních systémů a&nbsp;otázky inovační politiky.</p>
                             <p>E-mail: <a href="mailto:martin.srholec@cerge-ei.cz" >martin.srholec@cerge-ei.cz</a></p>
                         </div>
