boxes floating together

--- a/index.html
+++ b/index.html
@@ -104,21 +104,20 @@
             <div id="empt-app"class="fixempty fullscreen"></div>
             <div id="dyk_wrap" class="fullscreen">
                 <div class="chartcontainer">
-                    <div id="didyouknow" class="box helpbox">
-                        <p>Body zobrazují jednotlivá <a class="modalLink" onclick="showModal('modPracoviste')">výzkumná pracoviště</a></p>
-                        <p>Na osách jsou podíly článků v <a class="modalLink" onclick="showModal('modPredatori')">predátorských</a> a&nbsp;<a class="modalLink" onclick="showModal('modMistni')">místních</a> časopisech na všech článcích pracoviště (v %).</p>
-                        <p>Součet obou podílů <a class="modalLink" onclick="showModal('modPrekryv')">nemůže přesáhnout 100 %</a>, takže všechny body jsou pod diagonálou. Zvýrazněny jsou i&nbsp;vrstevnice pro nižší součty.</p>
-                        <p>Pracoviště blízko diagonály mají téměř všechny články v&nbsp;predátorských a&nbsp;místních časopisech.</p>
-                        <p>Pracoviště v&nbsp;levém dolním rohu v&nbsp;takových časopisech články nemají.</p>
-                    </div>
-                </div>
-            </div>
-            <div id="desc_wrap" class="fullscreen">
-                <div class="chartcontainer">
-                    <div id="descbox" class="box detailbox">
-                        <p><strong>Kliknutím</strong> na legendu <strong>zobrazíte či skryjete</strong> různé obory a&nbsp;typy pracovišť.</p>
-                        <p>Pro podrobnosti <strong>klikněte</strong> na jednotlivý bod či <strong>vyhledejte</strong> konkrétní pracoviště podle názvu v&nbsp;roletkovém menu nad grafem.</p>
-                        <p>Za vybrané pracoviště si <strong>stáhněte</strong> seznam článků v&nbsp;predátorských, místních i&nbsp;obou druzích časopisů</p>
+                    <div id="boxes">
+                        <div id="didyouknow" class="box helpbox">
+                            <p>Body zobrazují jednotlivá <a class="modalLink" onclick="showModal('modPracoviste')">výzkumná pracoviště</a></p>
+                            <p>Na osách jsou podíly článků v <a class="modalLink" onclick="showModal('modPredatori')">predátorských</a> a&nbsp;<a class="modalLink" onclick="showModal('modMistni')">místních</a> časopisech na všech článcích pracoviště (v %).</p>
+                            <p>Součet obou podílů <a class="modalLink" onclick="showModal('modPrekryv')">nemůže přesáhnout 100 %</a>, takže všechny body jsou pod diagonálou. Zvýrazněny jsou i&nbsp;vrstevnice pro nižší součty.</p>
+                            <p>Pracoviště blízko diagonály mají téměř všechny články v&nbsp;predátorských a&nbsp;místních časopisech.</p>
+                            <p>Pracoviště v&nbsp;levém dolním rohu v&nbsp;takových časopisech články nemají.</p>
+                        </div>
+
+                        <div id="descbox" class="box detailbox">
+                                <p><strong>Kliknutím</strong> na legendu <strong>zobrazíte či skryjete</strong> různé obory a&nbsp;typy pracovišť.</p>
+                                <p>Pro podrobnosti <strong>klikněte</strong> na jednotlivý bod či <strong>vyhledejte</strong> konkrétní pracoviště podle názvu v&nbsp;roletkovém menu nad grafem.</p>
+                                <p>Za vybrané pracoviště si <strong>stáhněte</strong> seznam článků v&nbsp;predátorských, místních i&nbsp;obou druzích časopisů</p>
+                        </div>    
                     </div>
                 </div>
             </div>
@@ -417,7 +416,6 @@
                         <div class="medailon">
                            <h4>Vítek Macháček</h4>
                             <center><img src="img/vitek.jpg" class="imgMy right" /></center>
-
                             <p>Pro think-tank IDEA začal pracovat v&nbsp;roce 2015. Magisterský titul získal v&nbsp;roce 2016 na Institutu ekonomických studií Univerzity Karlovy, kde je současně též doktorandem. Do roku 2018 též působil v&nbsp;České spořitelně v&nbsp;rámci EU office a&nbsp;později jako makroekonomický analytik. Zabývá se&nbsp;ekonomií inovací, scientometrií i&nbsp;evropskou integrací.</p>
                             <p>E-mail: <a href="mailto:vit.machacek@cerge-ei.cz" >vit.machacek@cerge-ei.cz</a></p>
                         </div>
