minor text corrections

--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
                 </div>
             <div id="LocalsAreNotPred" class="flow flowtext">
                     <div class="content">
-                    <h4>Je rozdíl mezi predátorskými a&nbsp;místními časopisy</h4>
-                        <p>V žádném případě nelze klást rovnítko mezi predátorskými a&nbsp;místními časopisy. Jde o&nbsp;zcela odlišné kategorie. Zatímco u&nbsp;predátorských časopisů hovoříme o&nbsp;podezření ze&nbsp;zanedbávání recenzního řízení, u&nbsp;časopisů místních máme na mysli úzce geograficky zaměřenou strukturu autorů.</p>
-                        <p>Při uvažování o&nbsp;místních časopisech je třeba brát v&nbsp;úvahu mezioborové rozdíly. Od časopisu zaměřeného na bohemistiku lze jen těžko očekávat autory z&nbsp;celého světa prostě proto, že jich drtivá většina působí v&nbsp;Česku. Takové obory se&nbsp;ale vyskytují zejména v&nbsp;humanitních oborech jako je historie, jazykověda či umění. Výzkumníci v ostatních oborech by svou práci měli vztahovat k&nbsp;mezinárodní literatuře. K&nbsp;tomu slouží právě časopisy.</p>
-                        <p></p>
-                    </div>
+                    <h4>Mezi predátorskými a místními časopisy je podstatný rozdíl</h4>
+                    <p>Je třeba zásadně rozlišovat mezi články v predátorských a místních časopisech. Zatímco u predátorských hovoříme o podezření z pochybných až přímo podvodných praktik, u místních máme na mysli úzkou autorskou základnu. Jedná se o zcela odlišné kategorie s jinou interpretací.</p>
+                    <p>Nicméně časopisy v obou kategoriích mají omezený přínos světové literatuře. Špičkoví zahraniční vědci do takových časopisů pravidelně nepřispívají a ani je nečtou. Skutečně vynikající výsledek by v takovém časopise s nejvyšší pravěpodobností zapadl.</p>
+                    <p>Při uvažování o místních časopisech je třeba zdůraznit rozdíly mezi obory. Do časopisu zaměřeného na bohemistiku budou přirozeně přispívat převážně místní autoři. Podobné obory, které se zabývají navýsost místními tématy, se vyskytují zejména v humanitních vědách. Naopak v ostatních oborech, včetně většiny společenských věd, je potřeba nové relevantní poznatky diskutovat ve světové vědecké komunitě.</p>
+                </div>
                 </div>
             <div id="empt-LocalsAreNotPred"class="fixempty fullscreen"></div>
     
@@ -317,7 +317,7 @@
                 <div class="close" onclick="hideModal()"><img src="img/closeIcon3.svg" /></div>
                 <div class="modalBody">
                     <h3>Hodnocení 2016</h3>
-                    <p>Studie vychází z&nbsp;konsolidovaných a&nbsp;harmonizovaných dat vládního <a href="http://www.vyzkum.cz/FrontClanek.aspx?idsekce=799259" targe="_blank">Hodnocení 2016</a>. Databáze obsahuje veškeré badatelské výsledky, které byly přihlášeny do RIVu v&nbsp;období 2011 – 2015. K vědeckému článku je přiřazeno jedno nebo více výzkumných pracovišť, pod jejichž hlavičkou vznikl. Nicméně pro účely této analýzy je každý článek, který je za&nbsp;pracoviště přihlášen, započítán právě jednou, nehledě na případné spoluautorství a&nbsp;podíl tohoto pracoviště na vzniku výsledku.</p>
+                    <p>Studie vychází z&nbsp; dat vládního <a href="http://www.vyzkum.cz/FrontClanek.aspx?idsekce=799259" targe="_blank">Hodnocení 2016</a>. Databáze obsahuje veškeré badatelské výsledky, které byly přihlášeny do RIVu v&nbsp;období 2011 – 2015. K vědeckému článku je přiřazeno jedno nebo více výzkumných pracovišť, pod jejichž hlavičkou vznikl. Nicméně pro účely této analýzy je každý článek, který je za&nbsp;pracoviště přihlášen, započítán právě jednou, nehledě na případné spoluautorství a&nbsp;podíl tohoto pracoviště na vzniku výsledku.</p>
                     <center><a onclick="hideModal()" class="button buttonActive">Skrýt</a></center>
 
                 </div>
